--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -8,11 +8,11 @@
     @Scripts.Render("~/bundles/modernizr")
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css?family=Roboto">
+          href="https://fonts.googleapis.com/css?family=Karla">
 </head>
 
-<body style="font-family:Roboto">
-    <div class="navbar navbar-default navbar-fixed-top navbar-">
+<body style="font-family: Karla; background-color: #A7D7C5; background-image: url('../../images/Group 8.png'); background-size:cover ">
+    @*<div class="navbar navbar-default navbar-fixed-top navbar-">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -30,7 +30,7 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </div>*@
 
     <div class="container body-content">
         @RenderBody()
