--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Karla">
+
+    <link href="~/Content/UserDefined.css" rel="stylesheet" />
 </head>
 
 <body style="font-family: Karla; background-color: #A7D7C5; background-image: url('../../images/Group 8.png'); background-size:cover ">
