--- a/WebApplication3/Views/SignIn/SignIn.cshtml
+++ b/WebApplication3/Views/SignIn/SignIn.cshtml
@@ -8,27 +8,39 @@
         position: absolute;
         transform: translate(-50%, -50%);
     }
+
     .input {
         font-size: 15px;
         font-style: normal;
-       
     }
+
     .my {
         background: #FFFFFF;
         border: 1.53407px solid rgba(0, 0, 0, 0.1);
         box-sizing: border-box;
         border-radius: 15.3407px;
     }
+
     .group {
-       margin: 10px; 
-       text-align:center
+        margin: 10px;
+        text-align: center
     }
+    
 </style>
 
-<div>
+<div class="row">
+
+    <label class="switch" style="float:right">
+        <input type="checkbox" id="mode" onclick="modecheckboxclick()" >
+        <span id="switchSpan" class="slider round"></span>
+    </label>
+
+</div>
+<div class="row">
+
     <div class="col-lg-3"></div>
     <div class="col-lg-6 " >
-        <div class="col-lg-4" style="background-color: #F6FBF9; border-radius:10px; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+        <div class="col-lg-4" id="signindiv" style="background-color: #F6FBF9; border-radius:10px; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);">
             <div class="group">
                 <label style="font-size: 55px;">
                     Sign In
@@ -53,7 +65,7 @@
             </div>
 
             <div class="group">
-                <button onclick="GetInButtonClick()"  style="font-size: 23px;  width:50%; background: #84C7AE; border-radius: 23.011px; color:white; " id="GetIn">Get In</button>
+                <button onclick="GetInButtonClick()" style="font-size: 23px;  width:50%; background: #84C7AE; border-radius: 23.011px; color:white; " id="GetIn">Get In</button>
             </div>
             <div class="group">
                 <lable> Create An Account? <a href='@Url.Action("CreateAccount","CreateAccount")'>Sign Up</a></lable>
@@ -79,13 +91,18 @@
             data: { emailAddress: emailAddress, password: password },
 
             success: function (result) {
+
+               
                 console.log("test");
                 console.log(result);
+                debugger
                 if (result.EmailAddress == '' || result.EmailAddress == null) {
                     alert("Invalid user");
                 }
                 else {
                     var url = '@Url.Action("PersonDetails", "PersonDetails")';
+                    //var parameter = new { userModel: result };
+                    //sessionStorage.setItem('loginUserDetails', parameter);
                     /*, new { userModel =Json.})';*/
                     //url = url.replace("parameter", result);
                     window.location.href = url;
@@ -100,6 +117,29 @@
 
         @*window.location.href = '@Url.Action("PersonDetails","PersonDetails")';
         alert("test");*@
+    }
+    function modecheckboxclick() {
+        if ($("#mode").is(":checked")) {
+            setColorToElement("black", "white","black");
+         /*   $("#switchSpan").css("border", "2px solid white");*/
+
+        }
+        else {
+            setColorToElement("white", "black","#A7D7C5");
+        }
+    }
+
+    function setColorToElement(bgColor, foreColor, pagebg) {
+        $('body').css("background-color", pagebg)
+        $("#signindiv").css("background-color", bgColor);
+        $("#signindiv").css("color", foreColor);
+        $("#EmailAddress").css("background-color", bgColor);
+        $("#EmailAddress").css("border-color", foreColor);
+        $("#Password").css("background-color", bgColor);
+        $("#Password").css("border-color", foreColor);
+
+        
+
     }
 
 </script>
