--- a/WebApplication3/Views/Login/Login.cshtml
+++ b/WebApplication3/Views/Login/Login.cshtml
@@ -53,6 +53,65 @@
         border-radius: 4px;
         
     }
+    .switch {
+        position: relative;
+        display: inline-block;
+        width: 60px;
+        height: 34px;
+    }
+
+        .switch input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+        }
+
+    .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #ccc;
+        -webkit-transition: .4s;
+        transition: .4s;
+    }
+
+        .slider:before {
+            position: absolute;
+            content: "";
+            height: 26px;
+            width: 26px;
+            left: 4px;
+            bottom: 4px;
+            background-color: white;
+            -webkit-transition: .4s;
+            transition: .4s;
+        }
+
+    input:checked + .slider {
+        background-color: #2196F3;
+    }
+
+    input:focus + .slider {
+        box-shadow: 0 0 1px #2196F3;
+    }
+
+    input:checked + .slider:before {
+        -webkit-transform: translateX(26px);
+        -ms-transform: translateX(26px);
+        transform: translateX(26px);
+    }
+
+    /* Rounded sliders */
+    .slider.round {
+        border-radius: 34px;
+    }
+
+        .slider.round:before {
+            border-radius: 50%;
+        }
 </style>
 
 <!DOCTYPE html>
@@ -65,54 +124,59 @@
 <body style=" font-family: Montserrat; background-color: #2148C0; background-image: url('../../images/BG.png'); background-repeat: no-repeat;
  background-attachment: fixed; background-size: 100% 100%;">
     <div>
-        <form class="form-login">
-            <div class="col-lg-3"></div>
-            <div class="col-lg-6">
-                <div class="ImageDiv" style="text-align:center;">
+        <div class="row">
 
-                    <img src="~/images/Group.png" />
+            <label class="switch" style="float:right; margin-right:20px">
+                <input type="checkbox" id="mode" onclick="modecheckboxclick()" >
+                <span id="switchSpan" class="slider round"></span>
+            </label>
+
+        </div>
+        <div class="row">
+            <form class="form-login">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-6">
+                    <div class="ImageDiv" style="text-align:center;">
+
+                        <img src="~/images/Group.png" />
+                    </div>
+
+                    <div class="input-group" style="margin:25px;">
+                        <span class="input-group-addon">
+                            <img src="~/images/user.png" />
+                        </span>
+                        <input type="text"
+                               style=" border-color: white; height: 30px; border: none; background-color: transparent;color:white;" id="userNameId" placeholder="USERNAME" />
+
+                    </div>
+
+
+                    <div class="input-group" style="margin:25px;">
+                        <span class="input-group-addon">
+                            <img src="~/images/lock.png" />
+                        </span>
+
+                        <input type="password"
+                               style="border-color: white; height: 30px; border: none; background-color: transparent; color: white;" id="passwordId" placeholder="PASSWORD" />
+                    </div>
+
+                    <div class="row" style="margin:25px;">
+                        <button class="form-control loginbtn" id="loginButton"> LOGIN </button>
+                    </div>
+
+                    <div class="row" style="margin:25px;">
+                        <a style="color: white; float: right;font-size:16px; font-weight:500"> forgot password? </a>
+                    </div>
+
                 </div>
+                <div class="col-lg-3"></div>
 
-                <div class="input-group" style="margin:25px;">
-                    <span class="input-group-addon">
-                        <img src="~/images/user.png" />
-                    </span>
-                    <input type="text"
-                           style=" border-color: white; height: 30px; border: none; background-color: transparent;color:white;" id="userNameId" placeholder="USERNAME" />
-
-                </div>
-
-
-                <div class="input-group" style="margin:25px;">
-                    <span class="input-group-addon">
-                        <img src="~/images/lock.png" />
-                    </span>
-
-                    <input type="password"
-                           style="border-color: white; height: 30px; border: none; background-color: transparent; color: white;" id="passwordId" placeholder="PASSWORD" />
-                </div>
-
-                <div class="row" style="margin:25px;">
-                    <button class="form-control loginbtn" id="loginButton" > LOGIN </button>
-                </div>
-
-                <div class="row" style="margin:25px;">
-                    <a style="color: white; float: right;font-size:16px; font-weight:500"> forgot password? </a>
-                </div>
-
-            </div>
-            <div class="col-lg-3"></div>
-
-        </form>
+            </form>
+        </div>
     </div>
 </body>
 </html>
 <script>
-
-
-    //$(document).ready(function () {
-    //    alert("ready!");
-    //});
 
         $(document).on('click', '#loginButton', function () {
 
@@ -128,5 +192,23 @@
             }
 
         })
+    function modecheckboxclick() {
+        if ($("#mode").is(":checked")) {
+            setColorToElement("black", "white", "black");
+             
+        }
+        else {
+            setColorToElement("#2148C0", "white", "#2148C0");
+            
+        }
 
+    }
+
+    function setColorToElement(bgColor, foreColor, pagebg) {
+        $('body').css("background-color", pagebg)
+        $("#userNameId").css("background-color", bgColor);
+        $("#userNameId").css("color", foreColor);
+        $("#passwordId").css("background-color", bgColor);
+        $("#passwordId").css("border-color", foreColor);
+    }
 </script>
